[FIX] sap.m.ObjectNumber: Aligned correctly in non editable form
BCP: 1680043365
(cherry picked from commit 75193599757dc863388339d82ecd2bd539518581)
CR-Id: 012006153200001293852016

--- a/src/sap.m/src/sap/m/themes/base/ObjectNumber.less
+++ b/src/sap.m/src/sap/m/themes/base/ObjectNumber.less
@@ -42,3 +42,8 @@ html[data-sap-ui-os^="Android"] {
 		padding-top: 0;
 	}
 }
+
+.sapUiForm .sapMObjectNumberUnit,
+.sapUiForm .sapMObjectNumberText {
+	vertical-align: top;
+}
